migrate to prisma-postgresql

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
       "@/utils/*": [
         "src/utils/*"
       ],
+      "@/prisma/*": [
+        "prisma/*"
+      ],
     },
     "incremental": true,
     "skipLibCheck": true,
