--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "helmet": "^5.1.0",
+    "nanoid": "^4.0.0",
     "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
